v1.0.1.1 - Increased font sizes, added coloured background to review type, and fixed some button placements and spacing.

--- a/src/webparts/customSrsApplication/components/CustomSrsApplication.module.scss
+++ b/src/webparts/customSrsApplication/components/CustomSrsApplication.module.scss
@@ -12,12 +12,19 @@
     }
 
     .buttonRow {
-      padding-top: 20px;
       text-align: center;
 
       .button:first-child {
         margin-left: 0;
       }
+    }
+
+    .topRow {
+      padding-bottom: 20px;
+    }
+
+    .bottomRow {
+      padding-top: 20px;
     }
 
     .row {
